syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC";

package CompanyJob;

import "google/protobuf/timestamp.proto";

service CompanyJob{


rpc GetCompanyJob(IdRequestCompanyJob) returns (CompanyJobReply);
rpc CreateCompanyJob(IdRequestCompanyJob) returns (CompanyJobReply);
rpc UpdateCompanyJob(IdRequestCompanyJob) returns (CompanyJobReply);
rpc DeleteCompanyJob(IdRequestCompanyJob) returns (CompanyJobReply);


}

message IdRequestCompanyJob {
	string Id=1;
}

message CompanyJobReply{
	string Id=1;
	string Company = 2;
	google.protobuf.Timestamp ProfileCreated = 3;
	bool IsInactive = 4;
	bool IsCompanyHidden = 5;
}


